--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Barrett Photography</title>
+  <title><marquee>Barrett Photography</marquee></title>
 
 </head>
 <body>
