--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title><marquee>Barrett Photography</marquee></title>
-
+  <h2> This is An online photography portfolio </h2>
 </head>
 <body>
 
