--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title><marquee>Barrett Photography</marquee></title>
-  <h2> This is An online photography portfolio </h2>
+  <title><marquee>Barrett's Photography</marquee></title>
+ 
 </head>
 <body>
-
+ <h2> This is An online photography portfolio </h2>
 </body>
 </html>
