--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <title>Barrett Photography</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="CSS/W3CSS.css">t
+<link rel="stylesheet" href="/style.css">t
 <style>
 body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif;}
 body, html {
@@ -101,8 +101,8 @@ body, html {
 
     <!-- Hide this text on small devices -->
     <div class="w3-col m6 w3-hide-small w3-padding-large">
-      <p>Hello, TB here. I would like to tell you a little bit about myself. I'm 15 and 1/2 years old and live in Las Vegas, Nevada. I like to make origami, play my guitar, and play my baritone saxaphone. I am the lead designer for CF TB Designs. I have recently learned how to code and wanted to use my design skills to help people in need.</p>
-        <p>     Im CF, a coder and web designer who currently works for CF TB Designs. I wish to further improve the company and help it reach its full potential.  I spend my free time playing guitar, practicing code and designing. I am looking forward to further improve the company and how we function.</p>
+      <p>Hello</p>
+        <p>Hello</p>
       </div>
 </div>
  <p class="w3-large w3-center w3-padding-16">Our Skills:</p>
