--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <title>Barrett Photography</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="/W3CSS.css">
+<link rel="stylesheet" href="/CSS/W3CSS.css">
 <style>
 body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif;}
 body, html {
