--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
-<title>Barrett Photography</title>
+<title>CF TB Designs</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="/CSS/W3CSS.css">
+<link rel="stylesheet" href="CSS/W3CSS.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link href="style.css" rel="stylesheet" type="text/css">
 <style>
 body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif;}
 body, html {
@@ -88,7 +91,7 @@ body, html {
 <div class="w3-content w3-container w3-padding-64" id="about">
   <h3 class="w3-center">ABOUT US</h3>
   <p class="w3-center"><em>We Design</em></p>
-  <p>Hello</p>
+  <p>Hello and welcome to CFTB Designs. We are two high school students who are looking to sell our designs printed on certain clothing items such as T-Shirts, Beanies, Bracelets, Jackets, Stickers and More.  We are raising money to fund our college and donate to small schools in the west of the United States.  CF is the coder, Clothing Production Manager and Programmer of CFTB Designs as TB is the Web Uploader, Lead Designer and Idea Junky. What we plan on donating to schools is 5% of all yearly income, to help forward School Expansions or Education. Our advertising campaign has a few thresholds that need to be reached then we do a giveaway. These thresholds are being funded on kickstarter, reaching 3,000 followers on Instagram and reaching 10,000 followers on Instagram</p>
   <p class="w3-wide"><i class="fa fa-camera"></i>Followers to 10,000</p>
   <div class="w3-progress-container">
     <div class="w3-progressbar" style="width:1%"></div>
@@ -101,18 +104,22 @@ body, html {
 
     <!-- Hide this text on small devices -->
     <div class="w3-col m6 w3-hide-small w3-padding-large">
-      <p>Hello</p>
-        <p>Hello</p>
+      <p>Hello, TB here. I would like to tell you a little bit about myself. I'm 15 and 1/2 years old and live in Las Vegas, Nevada. I like to make origami, play my guitar, and play my baritone saxaphone. I am the lead designer for CF TB Designs. I have recently learned how to code and wanted to use my design skills to help people in need.</p>
+        <p>     Im CF, a coder and web designer who currently works for CF TB Designs. I wish to further improve the company and help it reach its full potential.  I spend my free time playing guitar, practicing code and designing. I am looking forward to further improve the company and how we function.</p>
       </div>
-</div>
- <p class="w3-large w3-center w3-padding-16">Our Skills:</p>
+  </div>
+  <p class="w3-large w3-center w3-padding-16">Our Skills:</p>
+  <p class="w3-wide"><i class="fa fa-camera"></i>Illustrator</p>
+  <div class="w3-progress-container">
+    <div class="w3-progressbar" style="width:95%"></div>
+  </div>
   <p class="w3-wide"><i class="fa fa-laptop"></i>Web Design and Coding</p>
   <div class="w3-progress-container">
-    <div class="w3-progressbar" style="width:100%"></div>
-  </div>
-  <p class="w3-wide"><i class="fa fa-photo"></i>Photogaphy</p>
-  <div class="w3-progress-container">
     <div class="w3-progressbar" style="width:85%"></div>
+  </div>
+  <p class="w3-wide"><i class="fa fa-photo"></i>Photoshop</p>
+  <div class="w3-progress-container">
+    <div class="w3-progressbar" style="width:75%"></div>
   </div>
 </div>
 
@@ -134,12 +141,17 @@ body, html {
 <!-- Connor add a page for every t-shirt so that when you click it sends you to a page with the price and back side. Make sure to add buttons to buy after we get business licence-->
   <div class="w3-row-padding w3-center">
     <div class="w3-col m3">
-      <img src="/Images/Untitled-4front-01.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity">
+	<a href="/Normal-Boring.html">
+		<img src="/Images/Untitled-4-front.png" alt="Normal Is Boring" style="width:100%">
+	</a>  
     </div>
 
     <div class="w3-col m3">
-      <img src="/w3images/p2.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Coffee beans">
+	<a href="/Randy-Rhodes.html">
+		<img src="/Images/Untitled-5-Front-01.png" alt="Randy Rhodes" style="width:100%">
+	</a>  
     </div>
+
 
     <div class="w3-col m3">
       <img src="/w3images/p3.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Bear closeup">
@@ -211,15 +223,15 @@ body, html {
 <!-- Start Here: Web Form tutorial -->
 <form class="subscribeForm" name="Subscription Form" method="post" action="mailto:CFTB2020@gmail.com" enctype="text/plain">
 
-	<input id="fname" type="text" placeholder="First Name*" Name="First Name" required>
+	<input id="fname" type="text" placeholder="First Name" Name="First Name" required>
 	<br />
-	<input id="lname" type="text" placeholder="Last Name*" name="Last Name" required>
+	<input id="lname" type="text" placeholder="Last Name" name="Last Name" required>
 	<br />
 <!-- Step 1: Add an email field here -->
 	<input id="email" type="email" placeholder="Email" name="Email" required>
 	<br />
 <!-- Step 2: Add an address field here -->
-	<input id="address" type="text" placeholder="Message=" name="Message" required>
+	<input id="address" type="text" placeholder="Message" name="Message" required>
 	<br />
 <!-- Step 3: add a submit button here -->
 	<input id="submit" type="submit" value="Send">
