--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ body, html {
     </li>
     <li class="w3-left-align"><a href="#home">HOME</a></li>
     <li class="w3-hide-small"><a href="#about"><i class="fa fa-user"></i> ABOUT</a></li>
-    <li class="w3-hide-small"><a href="#portfolio"><i class="fa fa-th"></i> PRODUCTS</a></li>
+    <li class="w3-hide-small"><a href="#portfolio"><i class="fa fa-th"></i> PORTFOLIO</a></li>
     <li class="w3-hide-small"><a href="#contact"><i class="fa fa-envelope"></i> CONTACT</a></li>
     <li class="w3-hide-small"><a href="DesignIdeas.html"><i class="fa fa-th"></i> IDEA BOARD</a></li>
     <li class="w3-hide-small w3-right">
