--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ body, html {
 }
 /* Second image (Portfolio) */
 .bgimg-2 {
-    background-image:url(/Photos/);
+    background-image:url(/Photos/images.jpg);
     min-height: 400px;
 }
 /* Third image (Contact) */
