--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@ body, html {
 /* Second image (Portfolio) */
 .bgimg-2 {
     background-image:url(/images/images.jpg);
-    min-height: 400px;
+    min-height: 100%;
 }
 /* Third image (Contact) */
 .bgimg-3 {
     background-image:url(/images/864488f84ba139aa5fdbae3980f0cd86.jpg);
-    min-height: 400px;
+    min-height: 100%;
 }
 .w3-wide {letter-spacing: 10px;}
 .w3-hover-opacity {cursor: pointer;}
